--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.datasource.username=postgres
 spring.datasource.password=12345
 
 spring.jpa.show-sql=true
-#spring.jpa.generate-ddl=true
+spring.jpa.generate-ddl=true
