--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,7 @@ spring.datasource.password=12345
 spring.jpa.show-sql=true
 
 spring.jpa.generate-ddl=true
-#TODO OPTIONAL LEARN
 
+#TODO spring.jpa.open-in-view=false
+#TODO OPTIONAL LEARN
+#TODO PAGING
